2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_value.cpp
		* gameswf/gameswf_value.h
		Fixed as_value::operator=
		for PROPERTY

2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_sound_handler_sdl.cpp
		* gameswf/gameswf_sound_handler_sdl.h
		* gameswf/gameswf_sprite.cpp
		Fixed the sound bug (thanks to David Ruzicka).
		When the movie playback is paused, currently played sample
		continues to play even then. Added pause(..) method to sound_handler

2007-08-31  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_as_classes/as_netstream.cpp
		* gameswf/gameswf_as_classes/as_xmlsocket.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_timers.cpp
		* gameswf/gameswf_value.cpp
		as_environment* ==> weak_ptr<as_environment>	m_env
		We need to watch m_env, testcase:
		the movie executes the following opcodes
		_global.x = new Object();
		loadMovie("another.swf", _root);
		the result of this:
		current movie will be deleted and it environment too

2007-08-30  Vitaly Alexeev <tishka92@yahoo.com>

		* base/container.h
		* base/tu_loadlib.cpp
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_as_classes/as_string.cpp
		* gameswf/gameswf_log.cpp
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_value.cpp
		* gameswf/gameswf_value.h
		* gameswf/win32/VC8/gameswf.vcproj
		Added the supporting of C_FUNCTION getter/setter

2007-08-27  Vitaly Alexeev <tishka92@yahoo.com>

		* base/container.h
		* base/image.h
		* base/logger.h
		* base/ogl.h
		* base/tu_file.h
		* base/tu_loadlib.h
		* base/tu_types.h
		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h